--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,5 +18,6 @@ reqwest = "0.9.6"
 serde = { version = "1.0.84", features = ["derive"] }
 serde_derive = "1.0.84"
 serde_json = "1.0.38"
+serde_with = "1.1.0"
 serde_yaml = "0.8.8"
 tera = "0.11.20"
