Add another post from Yoshua Wuyts

--- a/posts.yml
+++ b/posts.yml
@@ -78,6 +78,10 @@
   date: 2019-01-11
   url: https://boats.gitlab.io/blog/post/wakers-ii/
 
+- title: "Async Ecosystem WG"
+  date: 2019-02-27
+  url: https://blog.yoshuawuyts.com/async-ecosystem-wg/
+
 - title: "Async-await status report"
   date: 2019-03-01
   url: http://smallcultfollowing.com/babysteps/blog/2019/03/01/async-await-status-report/
