Added RustLatam 2019 Zero-Cost Async IO video

--- a/posts.yml
+++ b/posts.yml
@@ -85,3 +85,7 @@
 - title: "Async-await status report"
   date: 2019-03-01
   url: http://smallcultfollowing.com/babysteps/blog/2019/03/01/async-await-status-report/
+
+- title: "RustLatam 2019 - Without Boats: Zero-Cost Async IO [video]"
+  date: 2019-04-19
+  url: https://www.youtube.com/watch?v=skos4B5x7qE
