Record debug log for page generating

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: rust
 cache: cargo
+env:
+  - RUST_LOG=areweasyncyet=debug
+
 script:
   - cargo run --verbose
   - tar cvf out.tar.xz out
