--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ log = "0.4.6"
 matches = "0.1.8"
 regex = "1.1.0"
 reqwest = "0.9.6"
+semver = "0.9.0"
 serde = { version = "1.0.84", features = ["derive"] }
 serde_derive = "1.0.84"
 serde_json = "1.0.38"
