--- a/posts.yml
+++ b/posts.yml
@@ -89,3 +89,7 @@
 - title: "RustLatam 2019 - Without Boats: Zero-Cost Async IO [video]"
   date: 2019-04-19
   url: https://www.youtube.com/watch?v=skos4B5x7qE
+
+- title: "A final proposal for await syntax"
+  date: 2019-05-06
+  url: https://boats.gitlab.io/blog/post/await-decision/
