Add status report #2

--- a/posts.yml
+++ b/posts.yml
@@ -97,3 +97,8 @@
 - title: "Update on await syntax"
   date: 2019-05-28
   url: https://boats.gitlab.io/blog/post/await-decision-ii/
+
+- title: "Async-await status report #2"
+  date: 2019-07-08
+  url: http://smallcultfollowing.com/babysteps/blog/2019/07/08/async-await-status-report-2/
+
