--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ chrono = "0.4.6"
 dotenv = "0.14.1"
 env_logger = "0.7.0"
 graphql_client = "0.8.0"
-lazy_static = "1.3.0"
 log = "0.4.6"
 matches = "0.1.8"
+once_cell = "1.2.0"
 regex = "1.1.6"
 reqwest = "0.9.16"
 semver = "0.9.0"
