--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,9 +11,9 @@ dotenv = "0.14.1"
 env_logger = "0.7.0"
 futures-util = "0.3.1"
 graphql_client = "0.8.0"
-lazy_static = "1.3.0"
 log = "0.4.6"
 matches = "0.1.8"
+once_cell = "1.2.0"
 regex = "1.1.6"
 reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
 semver = "0.9.0"
