--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 chrono = "0.4.6"
 dotenv = "0.14.1"
 env_logger = "0.7.0"
+futures-util-preview = "0.3.0-alpha.9"
 graphql_client = "0.8.0"
 lazy_static = "1.3.0"
 log = "0.4.6"
