Add publish = false in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Xidorn Quan <me@upsuper.org>"]
 license = "MIT OR Apache-2.0"
 edition = "2018"
+publish = false
 
 [dependencies]
 chrono = "0.4.6"
