--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ log = "0.4.6"
 matches = "0.1.8"
 once_cell = "1.2.0"
 regex = "1.1.6"
-reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
+reqwest = { version = "0.10.0", features = ["json"] }
 semver = "0.9.0"
 serde = { version = "1.0.91", features = ["derive"] }
 serde_derive = "1.0.91"
@@ -25,4 +25,4 @@ serde_json = "1.0.39"
 serde_with = "1.3.1"
 serde_yaml = "0.8.9"
 tera = "1.0.0"
-tokio = { version = "0.2.0-alpha.6", default-features = false, features = ["rt-full"] }
+tokio = { version = "0.2.6", default-features = false, features = ["macros"] }
