--- a/data.yml
+++ b/data.yml
@@ -51,6 +51,7 @@ async_extensions:
 
   - title: "Async closures"
     rfc: "2394-async_await#async--closures"
+    tracking: 62290
 
   - title: "Async iterators or stream"
     unresolved: "2394-async_await#generators-and-streams"
