--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,26 +3,26 @@ name = "areweasyncyet"
 version = "0.1.0"
 authors = ["Xidorn Quan <me@upsuper.org>"]
 license = "MIT OR Apache-2.0"
-edition = "2018"
+edition = "2021"
 publish = false
 
 [dependencies]
 anyhow = "1.0.26"
 chrono = "0.4.6"
 dotenv = "0.15.0"
-env_logger = "0.7.0"
+env_logger = "0.10.0"
 futures-util = "0.3.1"
-graphql_client = "0.8.0"
+graphql_client = "0.11.0"
 log = "0.4.6"
 matches = "0.1.8"
 once_cell = "1.2.0"
 regex = "1.1.6"
-reqwest = { version = "0.10.0", features = ["json"] }
-semver = "0.9.0"
+reqwest = { version = "0.11.13", features = ["json"] }
+semver = "1.0.14"
 serde = { version = "1.0.91", features = ["derive"] }
 serde_derive = "1.0.91"
 serde_json = "1.0.39"
-serde_with = "1.3.1"
-serde_yaml = "0.8.9"
+serde_with = "2.1.0"
+serde_yaml = "0.9.14"
 tera = "1.0.0"
-tokio = { version = "0.2.6", default-features = false, features = ["macros"] }
+tokio = { version = "1.22.0", default-features = false, features = ["macros", "rt-multi-thread"] }
