Ensure rustc_hash in cache key works correctly

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -26,6 +26,7 @@ jobs:
       - name: Setup Pages
         uses: actions/configure-pages@v2
       - name: Setup Rust toolchain
+        id: toolchain
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
